--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.html
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.html
@@ -155,15 +155,28 @@
                                         <div class="form-group" *ngIf="!user">
                                             <div class="row ml-3">
                                                 <b class="steps">Sub Location</b>
-                                                <h5 class="require">*</h5>
+                                                <!-- <h5 class="require">*</h5> -->
                                             </div>
-                                            <div>
-                                                <ng-select class="ng-select inputs2" [items]="subLocation" bindLabel="subLocation" bindValue="subLocation" placeholder="Select Sub Location">
+                                            <div class="mt-3">
+                                                <ng-select class="ng-select inputs2" [items]="subLocation" bindLabel="subLocation" bindValue="subLocation" placeholder="Select Sub Location" (change)="changeSubLocation($event)">
                                                 </ng-select>
-                                                <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
-                                                    <div *ngIf="f.location.errors.required">Location is required</div>
-                                                </div>
                                             </div>
+                                        </div>
+                                        <div class="form-group" *ngIf="user">
+                                            <div class="row ml-3">
+                                                <b class="steps">Sub Location</b>
+                                                <!-- <h5 class="require">*</h5> -->
+                                            </div>
+                                            <div class="mt-3">
+                                                <ng-select class="ng-select inputs2" [(ngModel)]="subLocationName" [ngModelOptions]="{standalone: true}" [items]="subLocation" bindLabel="subLocation" bindValue="subLocation" placeholder="Select Sub Location" (change)="changeSubLocation($event)">
+                                                </ng-select>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-3  mt-5">
+                                        <div class="form-group">
+                                            <button class="btn btn-primary" style="width: 150px;" routerLink="/add-location"> Add New Location</button>
                                         </div>
                                     </div>
                                 </div>
@@ -264,6 +277,17 @@
                                             </label>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="row ml-1">
+                                <b class="steps">Plot/House #</b>
+                                <h5 class="require">*</h5>
+                            </div>
+                            <div class="row">
+                                <div class="col-3">
+
+                                    <input type="text" formControlName="property_number" placeholder="Property Number" class="form-control">
                                 </div>
                             </div>
                             <div *ngIf="addinventoryForm.get('property_purpose').value === 'Buy' || addinventoryForm.get('property_purpose').value === 'Rent' ">
