add location issues resolved

--- a/src/app/dashboard/leads/leads.component.css
+++ b/src/app/dashboard/leads/leads.component.css
@@ -1,3 +1,9 @@
+.filter-btn {
+    width: 200px;
+    color: black;
+    background-color: #dcdcdc;
+}
+
 .form-check-input {
     margin-left: 13px;
     margin-top: 2px;
