--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -40,10 +40,19 @@
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
                         <input type="number" class="form-control" placeholder="Max Demand" [(ngModel)]="maxDemand">
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3" *ngIf="currentLoginUser?.access !== 'agent'">
+                    <div class="col-5 col-sm-6 col-lg-3 mb-3" *ngIf="currentLoginUser?.access !== 'agent'">
                         <ng-select class="ng-select inputs2" [items]="usersList" bindLabel="fullname" bindValue="fullname" placeholder="Added By" (change)="changeAssignAgent($event)">
                         </ng-select>
                     </div>
+
+                    <!-- <div class="row mb-3 mt-5"> -->
+                    <div class="col-5">
+                        <button class="btn btn-primary" data-toggle="modal" style="
+                        width: 200px;
+                        color: black;
+                        background-color: #dcdcdc;" data-target="#Property_Type">Search By <b>Property Type</b></button>
+                    </div>
+                    <!-- </div> -->
                     <div class="btn-container">
                         <button onclick="window.print()" class="btn btn-primary">Print</button>
                         <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
@@ -59,10 +68,9 @@
                                         <th (click)="sort('id')" scope="col">
                                             ID <i class="fa fa-sort"></i>
                                         </th>
-                                        <th>Added By</th>
-                                        <th scope="col">Purpose</th>
+                                        <!-- <th>Added By</th> -->
                                         <th scope="col">Client Details</th>
-
+                                        <th scope="col">Purpose</th>
                                         <th scope="col">Property Type</th>
                                         <th scope="col">Area</th>
                                         <th scope="col">Location</th>
@@ -75,7 +83,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let user of user| filterlist: selectedOption:refId | nameFilter: agentAssignedName  | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand| orderBy: key:reverse | tableFilter: city | LocationFilter:location | paginate: { itemsPerPage: 50, currentPage: p }">
+                                    <tr *ngFor="let user of user| filterlist: selectedOption:refId | property_type: property_type2 | nameFilter: agentAssignedName  | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand| orderBy: key:reverse | tableFilter: city | LocationFilter:location | paginate: { itemsPerPage: 50, currentPage: p }">
                                         <td>
                                             <span *ngIf="user?.priority == 'Super Hot'">
                                                 <img class="super-hot" src="\assets\icons\super_hot.svg">
@@ -90,13 +98,13 @@
 
 
                                         <td>{{ user.refId }}</td>
-                                        <td>{{user?.added_By?.fullname}}</td>
-                                        <td>{{ user.property_purpose }}</td>
+                                        <!-- <td>{{user?.added_By?.fullname}}</td> -->
                                         <td>
                                             <b>Name : </b>{{ user.client_name | titlecase }} <br />
                                             <b>Number : </b>{{ user.client_number }} <br />
                                             <b>Type : </b> {{ user.client_type }}
                                         </td>
+                                        <td>{{ user.property_purpose }}</td>
 
 
                                         <td>{{ user.property_type }}</td>
@@ -248,8 +256,7 @@
                 </div>
 
                 <div *ngIf="isCheckComment" class="form-group mt-3">
-                    <textarea class="form-control" (change)="updatingTheComments($event)" style="height: 140px;">{{currentUser?.comments}}
-                        </textarea>
+                    <textarea class="form-control" (change)="updatingTheComments($event)" style="height: 140px;">{{currentUser?.comments}}</textarea>
                 </div>
             </div>
             <div class="modal-footer">
@@ -258,6 +265,146 @@
                 </button>
                 <button (click)="assignLeadToAgent()" [class.no-click]="assignLeadData.length === 0" type="button" class="btn" data-dismiss="modal">
                     Assign
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal for Property Type Search Filter -->
+
+<div class="modal" id="Property_Type">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <!-- <div class="modal-content" style="height: 500px; 
+        margin: 1.75rem auto; 
+        max-width: 600px;"> -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="text-center">Property Type Filter</h4>
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+            </div>
+
+            <div class="modal-body" style="height: 250px;max-width: 500px;">
+                <div class="row">
+                    <div class="col-md-5 col-sm-5">
+                        <div class="radio">
+                            <div class="btn-group btn-group-toggle">
+                                <label class="btn btn-primary" style="width: 139px" [class.active]="property_type === 'Home'">
+                                    <input type="radio" [(ngModel)]="property_type" value="Home" />
+                                    Home
+                                </label>
+
+                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type === 'Plot'">
+                                    <input type="radio" [(ngModel)]="property_type" value="Plot" />
+                                    Plot
+                                </label>
+
+                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type === 'Commercial'">
+                                    <input type="radio" [(ngModel)]="property_type" value="Commercial" />
+                                    Commercial
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-5" *ngIf="property_type === 'Home'">
+                    <div class="col-12">
+                        <div class="radio">
+                            <div class="btn-group btn-group-toggle">
+                                <label class="btn btn-primary" style="width: 139px" [class.active]="property_type2 === 'House'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="House"/>
+                                    House
+                                </label>
+
+                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type2 === 'Apartment'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Apartment" />
+                                    Apartment
+                                </label>
+
+                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type2 === 'Farm House'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Farm House" />
+                                    Farm House
+                                </label>
+                            </div>
+                            <div class="mt-3 btn-group btn-group-toggle">
+                                <label class="btn btn-primary" style="width: 139px" [class.active]="property_type2 === 'Pent House'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Pent House" />
+                                    Pent House
+                                </label>
+
+                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type2 === 'Lower Portion'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Lower Portion" />
+                                    Lower Portion
+                                </label>
+
+                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type2 === 'Upper Portion'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Upper Portion" />
+                                    Upper Portion
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-5" *ngIf="property_type === 'Plot'">
+                    <div class="col-12">
+                        <div class="radio">
+                            <div class="btn-group btn-group-toggle">
+                                <label class="btn btn-primary" style="width: 139px" [class.active]="property_type2 === 'Residential Plot'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Residential Plot" />
+                                    Residential Plot
+                                </label>
+
+                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type2 === 'Commercial Plot'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Commercial Plot" />
+                                    Commercial Plot
+                                </label>
+
+                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type2 === 'Farm House Plot'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Farm House Plot" />
+                                    Farm House Plot
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-5" *ngIf="property_type === 'Commercial'">
+                    <div class="col-12">
+                        <div class="radio ml-3">
+                            <div class="row">
+                                <div class="btn-group btn-group-toggle">
+                                    <label class="btn btn-primary" style="width: 139px" [class.active]="property_type2 === 'Office'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Office" />
+                                    Office
+                                </label>
+
+                                    <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type2 === 'Shop'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Shop" />
+                                    Shop
+                                </label>
+
+                                    <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="property_type2 === 'Plaza'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Plaza" />
+                                    Plaza
+                                </label>
+
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="mt-3 btn-group btn-group-toggle">
+                                    <label class="btn btn-primary" style="width: 139px" [class.active]="property_type2 === 'Floor'">
+                                    <input type="radio" [(ngModel)]="property_type2" value="Floor" />
+                                    Floor
+                                </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">
+                    OK
                 </button>
             </div>
         </div>
