--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -10,43 +10,38 @@
                 <div class="row mb-3 mt-5">
                     <div class="col-12">
                         <button class="btn btn-primary" (click)="setFormTitle('Lead')">Add New</button>
+                        <button class="btn btn-secondary ml-3" data-toggle="modal"
+                            data-target="#searchFilterModal">Filter</button>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select [items]="options" bindLabel="name" bindValue="value" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
+                        <ng-select [items]="options" bindLabel="name" bindValue="value" placeholder="Filter By"
+                            [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input class="form-control" id="myInput" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
+                        <input class="form-control" id="myInput" type="text" placeholder="Search {{ placeholder }}"
+                            [(ngModel)]="refId" />
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city" placeholder="Select City" (change)="changeCity($event)">
+                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city"
+                            placeholder="Select City" (change)="changeCity($event)">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
+                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location"
+                            bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                         </ng-select>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="Start Date" (change)="changeStartDate($event)">
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="number" class="form-control" placeholder="Min Demand" [(ngModel)]="minDemand">
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="number" class="form-control" placeholder="Max Demand" [(ngModel)]="maxDemand">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3" *ngIf="currentLoginUser?.access !== 'agent'">
-                        <ng-select class="ng-select inputs2" [items]="usersList" bindLabel="fullname" bindValue="fullname" placeholder="Added By" (change)="changeAssignAgent($event)">
+                        <ng-select class="ng-select inputs2" [items]="usersList" bindLabel="fullname"
+                            bindValue="fullname" placeholder="Added By" (change)="changeAssignAgent($event)">
                         </ng-select>
                     </div>
                     <div class="btn-container">
                         <button onclick="window.print()" class="btn btn-primary">Print</button>
-                        <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
+                        <button (click)="exportTOExcel()" class="btn btn-primary ml-3">Excel</button>
                     </div>
                 </div>
                 <div class="row">
@@ -75,7 +70,8 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let user of user| filterlist: selectedOption:refId | nameFilter: agentAssignedName  | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand| orderBy: key:reverse | tableFilter: city | LocationFilter:location | paginate: { itemsPerPage: 50, currentPage: p }">
+                                    <tr
+                                        *ngFor="let user of user| filterlist: selectedOption:refId | nameFilter: agentAssignedName  | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand | areaFilter: area_unit:minArea:maxArea | orderBy: key:reverse | tableFilter: city | LocationFilter:location | paginate: { itemsPerPage: 50, currentPage: p }">
                                         <td>
                                             <span *ngIf="user?.priority == 'Super Hot'">
                                                 <img class="super-hot" src="\assets\icons\super_hot.svg">
@@ -105,7 +101,8 @@
                                         </td>
                                         <ng-template #elseBlockArea>
                                             <td>
-                                                <span *ngIf="user?.max_area == null || user?.min_area == null;else elseBlockArea2">
+                                                <span
+                                                    *ngIf="user?.max_area == null || user?.min_area == null;else elseBlockArea2">
                                                     <span>None</span>
                                                 </span>
                                                 <ng-template #elseBlockArea2>
@@ -117,12 +114,15 @@
                                         </ng-template>
 
                                         <td>
-                                            {{ user.city[0]?.city }}<span>&nbsp;&nbsp;</span><br /><span class="badge badge-light" *ngFor="let loc of user.location">{{
+                                            {{ user.city[0]?.city }}<span>&nbsp;&nbsp;</span><br /><span
+                                                class="badge badge-light" *ngFor="let loc of user.location">{{
                                                 loc.location }},
                                             </span>
                                         </td>
                                         <td *ngIf="user.demand_price == null; else elseBlockDemand">
-                                            <b>Max:</b> {{ user.max_price | currency :'Rs ' : 'symbol' : '1.0-0' }}<br /><b>Min:</b> {{ user.min_price | currency :'Rs ' : 'symbol' : '1.0-0' }}
+                                            <b>Max:</b> {{ user.max_price | currency :'Rs ' : 'symbol' : '1.0-0'
+                                            }}<br /><b>Min:</b> {{ user.min_price | currency :'Rs ' : 'symbol' : '1.0-0'
+                                            }}
                                         </td>
                                         <ng-template #elseBlockDemand>
                                             <td>{{ user.demand_price | currency :'Rs ' : 'symbol' : '1.0-0' }}</td>
@@ -144,18 +144,21 @@
                                             <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i>
                                             <a (click)="setUserToEdit(user)" role="button"></a>
 
-                                            <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal" data-target="#exampleModal1"></i> &nbsp;&nbsp;
+                                            <i class="fa fa-trash icon" (click)="confirmID(user._id)"
+                                                data-toggle="modal" data-target="#exampleModal1"></i> &nbsp;&nbsp;
                                             <span><i class="fas fa-exchange-alt" data-toggle="modal"
                                                     data-target="#myModal" (click)="setCurrentUser(user)"></i></span>
                                         </td>
-                                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog"
+                                            aria-labelledby="exampleModalLabel" aria-hidden="true">
                                             <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
                                                         <h5 class="modal-title" id="exampleModalLabel">
                                                             Delete Confirmation
                                                         </h5>
-                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <button type="button" class="close" data-dismiss="modal"
+                                                            aria-label="Close">
                                                             <span aria-hidden="true">&times;</span>
                                                         </button>
                                                     </div>
@@ -163,10 +166,12 @@
                                                         Are you sure you want to delete it?
                                                     </div>
                                                     <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                        <button type="button" class="btn btn-secondary"
+                                                            data-dismiss="modal">
                                                             Close
                                                         </button>
-                                                        <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteLead()">
+                                                        <button type="button" class="btn btn-danger"
+                                                            data-dismiss="modal" (click)="deleteLead()">
                                                             Delete
                                                         </button>
                                                     </div>
@@ -204,17 +209,20 @@
                     <div class="col-md-5 col-sm-5">
                         <div class="radio">
                             <div class="btn-group btn-group-toggle">
-                                <label class="btn btn-primary" style="width: 139px" [class.active]="assigned_type === 'city_admin'">
+                                <label class="btn btn-primary" style="width: 139px"
+                                    [class.active]="assigned_type === 'city_admin'">
                                     <input type="radio" [(ngModel)]="assigned_type" value="city_admin" />
                                     City Admin
                                 </label>
 
-                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="assigned_type === 'Admin'">
+                                <label class="btn btn-primary ml-3" style="width: 139px"
+                                    [class.active]="assigned_type === 'Admin'">
                                     <input type="radio" [(ngModel)]="assigned_type" value="Admin" />
                                     Admins
                                 </label>
 
-                                <label class="btn btn-primary ml-3" style="width: 139px" [class.active]="assigned_type === 'Agents'">
+                                <label class="btn btn-primary ml-3" style="width: 139px"
+                                    [class.active]="assigned_type === 'Agents'">
                                     <input type="radio" [(ngModel)]="assigned_type" value="Agents" />
                                     Agents
                                 </label>
@@ -226,17 +234,22 @@
                 <br />
                 <div class="row">
                     <div class="col-8" *ngIf="assigned_type === 'city_admin'">
-                        <ng-select class="ng-select inputs2 mt-3" [items]="cityAdminList" bindLabel="city.city" bindValue="fullname" placeholder="Select city admin" (change)="changeAssignedToCityAdmin($event)">
+                        <ng-select class="ng-select inputs2 mt-3" [items]="cityAdminList" bindLabel="city.city"
+                            bindValue="fullname" placeholder="Select city admin"
+                            (change)="changeAssignedToCityAdmin($event)">
                         </ng-select>
                     </div>
 
                     <div class="col-8" *ngIf="assigned_type === 'Admin'">
-                        <ng-select class="ng-select inputs2  mt-3" [items]="superAdminList" bindLabel="access" bindValue="access" placeholder="Select Admin" (change)="changeAssignedAdmin($event)">
+                        <ng-select class="ng-select inputs2  mt-3" [items]="superAdminList" bindLabel="access"
+                            bindValue="access" placeholder="Select Admin" (change)="changeAssignedAdmin($event)">
                         </ng-select>
                     </div>
 
                     <div class="col-8" *ngIf="assigned_type === 'Agents'">
-                        <ng-select #agentSelect class="ng-select inputs2 mt-3" [items]="agentList" [multiple]="true" bindLabel="fullname" bindValue="fullname" placeholder="Select Agent" (change)="changeAssignedAgent($event)">
+                        <ng-select #agentSelect class="ng-select inputs2 mt-3" [items]="agentList" [multiple]="true"
+                            bindLabel="fullname" bindValue="fullname" placeholder="Select Agent"
+                            (change)="changeAssignedAgent($event)">
                         </ng-select>
                     </div>
                 </div>
@@ -256,8 +269,102 @@
                 <button type="button" class="btn btn-danger" data-dismiss="modal">
                     Close
                 </button>
-                <button (click)="assignLeadToAgent()" [class.no-click]="assignLeadData.length === 0" type="button" class="btn" data-dismiss="modal">
+                <button (click)="assignLeadToAgent()" [class.no-click]="assignLeadData.length === 0" type="button"
+                    class="btn" data-dismiss="modal">
                     Assign
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="searchFilterModal" tabindex="-1" role="dialog" aria-labelledby="searchFilterModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <img alt="ASASA.com" class="logo" src="/assets/asasa/asasa_logo.png" />
+
+                <h5 class="modal-title" id="searchFilterModalLabel"></h5>
+
+                <a class="btn btn-default btn-sm" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </a>
+            </div>
+
+            <div class="modal-body filter-modal">
+                <form [formGroup]="filterForm">
+                    <br />
+                    <h5><i class="fas fa-caret-right"></i> Price</h5>
+
+                    <div class="row modal-rows">
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group price">
+                                <input type="number" class="form-control" placeholder="Min Demand"
+                                    formControlName="minPrice">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group price">
+                                <input type="number" class="form-control" placeholder="Max Demand"
+                                    formControlName="maxPrice">
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+
+                    <h5><i class="fas fa-caret-right"></i> Date</h5>
+
+                    <div class="row modal-rows">
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group date">
+                                <input type="text" onfocus="(this.type='date')" class="form-control"
+                                    placeholder="Start Date" formControlName="startDate">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group date">
+                                <input type="text" onfocus="(this.type='date')" class="form-control"
+                                    placeholder="End Date" formControlName="endDate">
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+
+                    <h5><i class="fas fa-caret-right"></i> Area</h5>
+                    <div class="row modal-rows">
+                        <div class="com-sm-3 col-md-4">
+                            <select class="form-control" formControlName="area">
+                                <option [ngValue]="null">Select Area</option>
+                                <option value="Kanal">Kanal</option>
+                                <option value="Marla">Marla</option>
+
+                                <option value="Sq.Yard">Square Yard</option>
+                                <option value="Sq.Feet">Square Feet</option>
+                            </select>
+                        </div>
+
+                        <div class="col-sm-5 col-md-3">
+                            <input type="number" class="form-control" placeholder="Min Area" formControlName="minArea">
+                        </div>
+                        <div class="col-sm-3 col-md-3">
+                            <input type="number" class="form-control" placeholder="Min Area" formControlName="maxArea">
+                        </div>
+                        <br />
+                    </div>
+                    <br />
+                </form>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger reset" data-dismiss="modal" (click)="resetFilters()">
+                    <span class="fas fa-undo"></span> Reset
+                </button>
+                <button type="button" class="btn btn-primary filter-button" [disabled]="filterForm.invalid"
+                    data-dismiss="modal" (click)="filter()">
+                    <span class="fas fa-check"></span>Search
                 </button>
             </div>
         </div>
