--- a/src/app/dashboard/assigned-leads/assigned-leads.component.html
+++ b/src/app/dashboard/assigned-leads/assigned-leads.component.html
@@ -7,7 +7,14 @@
             <div class="container-fluid">
                 <h1 class="h3 mb-2 text-gray-800">Assigned Leads Table</h1>
 
-                <div class="row mt-5">
+                <div class="row mb-3 mt-5">
+                    <div class="col-12">
+                        <button class="btn btn-secondary" data-toggle="modal"
+                            data-target="#searchFilterModal">Filter</button>
+                    </div>
+                </div>
+
+                <div class="row">
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
                         <ng-select [items]="options" bindLabel="name" bindValue="value" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
                         </ng-select>
@@ -23,23 +30,9 @@
                         <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                         </ng-select>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="Start Date" (change)="changeStartDate($event)">
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="number" class="form-control" placeholder="Min Demand" [(ngModel)]="minDemand">
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="number" class="form-control" placeholder="Max Demand" [(ngModel)]="maxDemand">
-                    </div>
-                </div>
-                <div class="row mb-3">
                     <div class="btn-container">
                         <button onclick="window.print()" class="btn btn-primary">Print</button>
-                        <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
+                        <button (click)="exportTOExcel()" class="btn btn-primary ml-3">Excel</button>
                     </div>
                 </div>
                 <div class="row">
@@ -61,7 +54,7 @@
                                 </thead>
 
                                 <tbody>
-                                    <tr *ngFor="let user of user | filterlist: selectedOption:refId | tableFilter: city | LocationFilter:location | demandFilter: minDemand:maxDemand | dateFilter: startDate:endDate | paginate:{itemsPerPage:10,currentPage:p}; ">
+                                    <tr *ngFor="let user of user | filterlist: selectedOption:refId | tableFilter: city | LocationFilter:location | areaFilter: area_unit:minArea:maxArea | demandFilter: minDemand:maxDemand | dateFilter: startDate:endDate | paginate:{itemsPerPage:10,currentPage:p}; ">
                                         <td> <span *ngIf="user?.priority == 'Super Hot' else hot"><img class="super-hot"
                                                     src="\assets\icons\super_hot.svg"></span>
 
@@ -192,6 +185,99 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">
                     Close
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="searchFilterModal" tabindex="-1" role="dialog" aria-labelledby="searchFilterModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <img alt="ASASA.com" class="logo" src="/assets/asasa/asasa_logo.png" />
+
+                <h5 class="modal-title" id="searchFilterModalLabel"></h5>
+
+                <a class="btn btn-default btn-sm" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </a>
+            </div>
+
+            <div class="modal-body filter-modal">
+                <form [formGroup]="filterForm">
+                    <br />
+                    <h5><i class="fas fa-caret-right"></i> Price</h5>
+
+                    <div class="row modal-rows">
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group price">
+                                <input type="number" class="form-control" placeholder="Min Demand"
+                                    formControlName="minPrice">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group price">
+                                <input type="number" class="form-control" placeholder="Max Demand"
+                                    formControlName="maxPrice">
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+
+                    <h5><i class="fas fa-caret-right"></i> Date</h5>
+
+                    <div class="row modal-rows">
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group date">
+                                <input type="text" onfocus="(this.type='date')" class="form-control"
+                                    placeholder="Start Date" formControlName="startDate">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group date">
+                                <input type="text" onfocus="(this.type='date')" class="form-control"
+                                    placeholder="End Date" formControlName="endDate">
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+
+                    <h5><i class="fas fa-caret-right"></i> Area</h5>
+                    <div class="row modal-rows">
+                        <div class="com-sm-3 col-md-4">
+                            <select class="form-control" formControlName="area">
+                                <option [ngValue]="null">Select Area</option>
+                                <option value="Kanal">Kanal</option>
+                                <option value="Marla">Marla</option>
+
+                                <option value="Sq.Yard">Square Yard</option>
+                                <option value="Sq.Feet">Square Feet</option>
+                            </select>
+                        </div>
+
+                        <div class="col-sm-5 col-md-3">
+                            <input type="number" class="form-control" placeholder="Min Area" formControlName="minArea">
+                        </div>
+                        <div class="col-sm-3 col-md-3">
+                            <input type="number" class="form-control" placeholder="Min Area" formControlName="maxArea">
+                        </div>
+                        <br />
+                    </div>
+                    <br />
+                </form>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger reset" data-dismiss="modal" (click)="resetFilters()">
+                    <span class="fas fa-undo"></span> Reset
+                </button>
+                <button type="button" class="btn btn-primary filter-button" [disabled]="filterForm.invalid"
+                    data-dismiss="modal" (click)="filter()">
+                    <span class="fas fa-check"></span>Search
                 </button>
             </div>
         </div>
