--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -10,6 +10,8 @@
                 <div class="row mb-3 mt-5">
                     <div class="col-12">
                         <button class="btn btn-primary" (click)="setFormTitle('Inventory')">Add New</button>
+                        <button class="btn btn-secondary ml-3" data-toggle="modal"
+                            data-target="#searchFilterModal">Filter</button>
                     </div>
                 </div>
                 <div class="row">
@@ -28,25 +30,13 @@
                         <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                         </ng-select>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="Start Date" (change)="changeStartDate($event)">
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="number" class="form-control" placeholder="Min Demand" [(ngModel)]="minDemand">
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="number" class="form-control" placeholder="Max Demand" [(ngModel)]="maxDemand">
-                    </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3" *ngIf="currentLoginUser?.access !== 'agent'">
                         <ng-select class="ng-select inputs2" [items]="agentList" bindLabel="fullname" bindValue="fullname" placeholder="Select Added By" (change)="changeAssignedAgent($event)">
                         </ng-select>
                     </div>
                     <div class="btn-container">
                         <button onclick="window.print()" class="btn btn-primary">Print</button>
-                        <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
+                        <button (click)="exportTOExcel()" class="btn btn-primary ml-3">Excel</button>
                     </div>
                 </div>
                 <div class="row">
@@ -71,7 +61,7 @@
                                 </thead>
 
                                 <tbody>
-                                    <tr *ngFor="let user of user | filterlist: selectedOption:refId | nameFilter: agentAssignedName | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand | tableFilter: city | LocationFilter:location |  orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p}; ">
+                                    <tr *ngFor="let user of user | filterlist: selectedOption:refId | nameFilter: agentAssignedName | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand | areaFilter: area_unit:minArea:maxArea | tableFilter: city | LocationFilter:location |  orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p}; ">
                                         <td>
                                             <span *ngIf="user?.priority == 'Super Hot'"><img class="super-hot"
                                                     src="\assets\icons\super_hot.svg"></span>
@@ -179,6 +169,99 @@
                         <pagination-controls (pageChange)="p = $event"></pagination-controls>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="searchFilterModal" tabindex="-1" role="dialog" aria-labelledby="searchFilterModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <img alt="ASASA.com" class="logo" src="/assets/asasa/asasa_logo.png" />
+
+                <h5 class="modal-title" id="searchFilterModalLabel"></h5>
+
+                <a class="btn btn-default btn-sm" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </a>
+            </div>
+
+            <div class="modal-body filter-modal">
+                <form [formGroup]="filterForm">
+                    <br />
+                    <h5><i class="fas fa-caret-right"></i> Price</h5>
+
+                    <div class="row modal-rows">
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group price">
+                                <input type="number" class="form-control" placeholder="Min Demand"
+                                    formControlName="minPrice">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group price">
+                                <input type="number" class="form-control" placeholder="Max Demand"
+                                    formControlName="maxPrice">
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+
+                    <h5><i class="fas fa-caret-right"></i> Date</h5>
+
+                    <div class="row modal-rows">
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group date">
+                                <input type="text" onfocus="(this.type='date')" class="form-control"
+                                    placeholder="Start Date" formControlName="startDate">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-3 col-md-4">
+                            <div class="form-group date">
+                                <input type="text" onfocus="(this.type='date')" class="form-control"
+                                    placeholder="End Date" formControlName="endDate">
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+
+                    <h5><i class="fas fa-caret-right"></i> Area</h5>
+                    <div class="row modal-rows">
+                        <div class="com-sm-3 col-md-4">
+                            <select class="form-control" formControlName="area">
+                                <option [ngValue]="null">Select Area</option>
+                                <option value="Kanal">Kanal</option>
+                                <option value="Marla">Marla</option>
+
+                                <option value="Sq.Yard">Square Yard</option>
+                                <option value="Sq.Feet">Square Feet</option>
+                            </select>
+                        </div>
+
+                        <div class="col-sm-5 col-md-3">
+                            <input type="number" class="form-control" placeholder="Min Area" formControlName="minArea">
+                        </div>
+                        <div class="col-sm-3 col-md-3">
+                            <input type="number" class="form-control" placeholder="Min Area" formControlName="maxArea">
+                        </div>
+                        <br />
+                    </div>
+                    <br />
+                </form>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger reset" data-dismiss="modal" (click)="resetFilters()">
+                    <span class="fas fa-undo"></span> Reset
+                </button>
+                <button type="button" class="btn btn-primary filter-button" [disabled]="filterForm.invalid"
+                    data-dismiss="modal" (click)="filter()">
+                    <span class="fas fa-check"></span>Search
+                </button>
             </div>
         </div>
     </div>
